# jsondiff

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  README.rst  dev-requirements.txt  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: pr_check.yml  python_publish.yml
docs/: Makefile  basic_use.rst  conf.py  index.rst  make.bat
jsondiff/: __init__.py  cli.py  symbols.py
jsondiff/tests/: generate_readme.py  test_jsondiff.py
tests/: __init__.py  generate_readme.py  test_jsondiff.py  utils.py
tests/data/: test_01.json  test_01.yaml
