[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsondiff"
description = "Diff JSON and JSON-like structures in Python"
dynamic = ["version"]
readme = "README.rst"
license= {file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Zoomer Analytics LLC", email = "eric.reynolds@zoomeranalytics.com"}
]
keywords = ['json', 'diff', 'diffing', 'difference', 'patch', 'delta', 'dict', 'LCS']
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "pyyaml"
]

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/xlwings/jsondiff"
"Bug Tracker" = "https://github.com/xlwings/jsondiff/issues"

[project.scripts]
jdiff = "jsondiff.cli:main"

[tool.setuptools.packages.find]
include = ["jsondiff*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "jsondiff.__version__"}
